# diffutils-prebuilt

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yaml  release.yaml
patches/: BUILD.bazel  diffutils-musl-fixes.patch  sed-include-order-fix.patch  windows_amd64.patch  windows_arm64.patch
