load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

PLATFORMS = [
    "@toolchains_llvm_bootstrapped//platforms:linux_x86_64_gnu.2.39",
]

[
    platform_transition_filegroup(
        name = "for_{}".format(p.split(":")[1]),
        srcs = ["@diffutils//:diff"],
        tags = ["manual"],
        target_platform = p,
    )
    for p in PLATFORMS
]

filegroup(
    name = "for_all_platforms",
    srcs = [":for_{}".format(p.split(":")[1]) for p in PLATFORMS],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)
