load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

PLATFORMS = [
    "@toolchains_llvm_bootstrapped//platforms:linux_x86_64_musl",
    "@toolchains_llvm_bootstrapped//platforms:linux_arm64_musl",
    "@toolchains_llvm_bootstrapped//platforms:macos_amd64",
    "@toolchains_llvm_bootstrapped//platforms:macos_arm64",
]

[
    platform_transition_filegroup(
        name = "for_{}".format(p.split(":")[1]),
        srcs = ["@diffutils//:diff"],
        tags = ["manual"],
        target_platform = p,
    )
    for p in PLATFORMS
]

filegroup(
    name = "for_all_platforms",
    srcs = [":for_{}".format(p.split(":")[1]) for p in PLATFORMS],
)
