bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "diffutils", version = "3.12")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.7")

git_override(
    module_name = "diffutils",
    remote = "https://github.com/kormide/diffutils-bcr.git",
    commit = "8e2b07e1b51c8680b7c7ad07b88f300f19f55b8d",
    patches = ["//patches:diffutils-musl-fixes.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "sed",
    version = "4.9.bcr.3",
    patches = ["//patches:sed-include-order-fix.patch"],
    patch_strip = 1,
)

register_toolchains("@toolchains_llvm_bootstrapped//toolchain:all")
