bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "diffutils", version = "3.12")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "llvm", version = "0.6.0")

# Grab https://github.com/kormide/bazel-central-registry/blob/diffutils-3.12/modules/diffutils/3.12/source.json
# which is not yet landed on BCR
diffutils_bcr_entry = "https://raw.githubusercontent.com/kormide/bazel-central-registry/427a383f55634c223887c6b5800a485b31aa1743/modules/diffutils/3.12"

archive_override(
    module_name = "diffutils",
    remote_file_integrity = {
        "BUILD.bazel": "sha256-4eIAj9uxYyW/xNy1y78FPA6kPN0laO4OSNIiyqMY64c=",
        "config_linux.bzl": "sha256-+FK/rSJ2+aCl7GQScpiwpC9ZglhsZKnkHDolVNcL8pQ=",
        "config_macos.bzl": "sha256-xEThEHPuJXO12thd0PG/CcLAIAJvTdjxD/ewvKc9hRc=",
        "lib/BUILD.bazel": "sha256-L86uLyVYWKKuGTK6dSLoIGTpzj5gztyFAkgz42Hrkj0=",
        "lib/config_linux_amd64.h": "sha256-QMw2KI3G7Q3wlxXz4QbUmtEVG/+wTIyrmXrrnN5L+t0=",
        "lib/config_linux_arm64.h": "sha256-Ea0zm1d0ApvAUDRltIHYdZGB5+mCAsFMuDWVQ1p79EI=",
        "lib/config_macos_amd64.h": "sha256-hsHLRe9cyvPvyR+/tK+oNRTrentfPjtZsZNYFlcSnvM=",
        "lib/config_macos_arm64.h": "sha256-KUXyjF0mF4Mx6Bt4Z45ffZtjfT5fVsuD0GaqnFNnl5g=",
        "src/BUILD.bazel": "sha256-NNWAkfi+GHT4mN7BuSy9Hsz++6wYI48LOn8buZ72v04=",
        "test/BUILD.bazel": "sha256-UO6eh7OWUww/SetI3quWxb8Jxm2QASpyMNWx2D/Nv4c=",
        "utils.bzl": "sha256-rI2lCObgrPe5PncMTu+Sj6MvaAACeyEGcYSMi61BWQ0="
    },
    remote_file_urls = {
        "BUILD.bazel": [diffutils_bcr_entry + "/overlay/BUILD.bazel"],
        "config_linux.bzl": [diffutils_bcr_entry + "/overlay/config_linux.bzl"],
        "config_macos.bzl": [diffutils_bcr_entry + "/overlay/config_macos.bzl"],
        "lib/BUILD.bazel": [diffutils_bcr_entry + "/overlay/lib/BUILD.bazel"],
        "lib/config_linux_amd64.h": [diffutils_bcr_entry + "/overlay/lib/config_linux_amd64.h"],
        "lib/config_linux_arm64.h": [diffutils_bcr_entry + "/overlay/lib/config_linux_arm64.h"],
        "lib/config_macos_amd64.h": [diffutils_bcr_entry + "/overlay/lib/config_macos_amd64.h"],
        "lib/config_macos_arm64.h": [diffutils_bcr_entry + "/overlay/lib/config_macos_arm64.h"],
        "src/BUILD.bazel": [diffutils_bcr_entry + "/overlay/src/BUILD.bazel"],
        "test/BUILD.bazel": [diffutils_bcr_entry + "/overlay/test/BUILD.bazel"],
        "utils.bzl": [diffutils_bcr_entry + "/overlay/utils.bzl"],
    },
    remote_module_file_integrity = "sha256-sowgYx+GGO7nSNpkAvXEIVUoawmMM2mN4RQs7DO5am0=",
    remote_module_file_urls = [
        diffutils_bcr_entry + "/MODULE.bazel",
    ],
    sha256 = "7c8b7f9fc8609141fdea9cece85249d308624391ff61dedaf528fcb337727dfd",
    strip_prefix = "diffutils-3.12",
    url = "https://mirror.cs.odu.edu/gnu/diffutils/diffutils-3.12.tar.xz",
    patch_strip = 1,
    patches = [
        # upstream @sed dependency fails to build on a windows runner,
        # so this can't be added to the BCR yet
        "patches/windows_amd64.patch",
    ]
)

register_toolchains("@llvm//toolchain:all")
