bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "diffutils", version = "3.12")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "llvm", version = "0.6.0")

single_version_override(
    module_name = "diffutils",
    patch_strip = 1,
    patches = [
        # upstream @sed dependency fails to build on a windows runner,
        # so this can't be added to the BCR yet
        "patches/windows_amd64.patch",
    ]
)

register_toolchains("@llvm//toolchain:all")
